--- a/infra-platform-frontend/public/locales/hu/devices.json
+++ b/infra-platform-frontend/public/locales/hu/devices.json
@@ -2,7 +2,7 @@
   "addDevice": "Eszköz hozzáadása",
   "addDeviceDescription": "Konfiguráld az eszközbeállításaidat, hogy hozzáadd az eszközödet a készletedhez",
   "addFirstDevice": "Első eszköz hozzáadása",
-  "deviceCount": "{{count}} eszköz található",
+  "deviceCount": " eszköz található",
   "noDevicesFound": "Nem található eszköz",
   "tryDifferentFilters": "Próbáld meg módosítani a szűrőket, vagy adj hozzá egy új eszközt",
   "allDevices": "Összes eszköz",
@@ -51,7 +51,7 @@
   "deviceNotFound": "Az eszköz nem található. Lehet, hogy törölték, vagy nincs jogosultságod megtekinteni.",
   "deleteDevice": {
     "title": "Eszköz törlése",
-    "confirmation": "Biztosan törölni szeretnéd a \"{{name}}\" eszközt?",
+    "confirmation": "Biztosan törölni szeretnéd a \"\" eszközt?",
     "warning": "Ez a művelet nem vonható vissza. Az összes eszközadat véglegesen törlődik."
   },
   "steps": {
@@ -133,17 +133,28 @@
     "advanced": "Haladó",
     "parameters": "Paraméterek",
     "jsonEditor": "JSON szerkesztő",
-    "details": "Részletek"
+    "details": "Részletek",
+    "hardware": "Hardver",
+    "processes": "Folyamatok",
+    "containers": "Konténerek"
   },
   "systemInfo": {
     "hostname": "Hosztnév",
     "os": "Operációs rendszer",
-    "uptime": "Üzemidő"
+    "uptime": "Üzemidő",
+    "platform": "Platform"
   },
   "cpuInfo": {
     "overall": "Teljes CPU kihasználtság",
     "cores": "CPU magok",
-    "core": "Mag"
+    "core": "Mag",
+    "title": "CPU",
+    "usage": "Használat",
+    "user": "Felhasználói",
+    "system": "Rendszer",
+    "idle": "Üresjárat",
+    "physicalCores": "Fizikai magok",
+    "logicalCores": "Logikai magok"
   },
   "diskInfo": {
     "usage": "Használat",
@@ -162,7 +173,46 @@
     "total": "Összesen",
     "running": "Fut",
     "sleeping": "Alvó",
-    "threads": "Szálak"
+    "threads": "Szálak",
+    "title": "Folyamatok",
+    "processes": "Folyamatok",
+    "pid": "PID",
+    "name": "Név",
+    "user": "Felhasználó",
+    "cpu": "CPU",
+    "memory": "Memória",
+    "status": "Állapot"
+  },
+  "memoryInfo": {
+    "title": "Memória",
+    "ramUsage": "RAM használat",
+    "free": "Szabad",
+    "cached": "Gyorsítótárazott",
+    "buffers": "Pufferek",
+    "used": "Használt",
+    "swap": "Swap",
+    "swapUsage": "Swap használat"
+  },
+  "storage": {
+    "title": "Tárhely",
+    "mountpoint": "Csatolási pont",
+    "usage": "Használat",
+    "total": "Összesen",
+    "used": "Használt",
+    "free": "Szabad"
+  },
+  "network": {
+    "title": "Hálózat",
+    "noData": "Nincs hálózati adat"
+  },
+  "containers": {
+    "title": "Konténerek",
+    "count": "Konténerek száma",
+    "image": "Kép",
+    "cpu": "CPU",
+    "rx": "Fogadott",
+    "tx": "Küldött",
+    "uptime": "Üzemidő"
   },
   "errors": {
     "failedToLoadStats": "Nem sikerült betölteni az eszköz statisztikáit",
@@ -222,6 +272,8 @@
   "noDevicesMatchFilters": "Egyetlen eszköz sem felel meg a jelenlegi szűrőknek",
   "noDevicesYet": "Még nincs eszköz a készletedben",
   "addYourFirstDevice": "Kezdd az első eszköz hozzáadásával a monitorozáshoz",
-  "showingFilteredResults": "Mutat {{count}} a(z) {{total}} eszközből",
-  "standardDevices": "Szabványos eszközök"
+  "showingFilteredResults": "Mutat  a(z)  eszközből",
+  "created": "Létrehozva",
+  "refresh": "Frissítés",
+  "fetchingStats": "Statisztikák lekérése"
 }
