--- a/infra-platform-frontend/public/locales/en/plugins.json
+++ b/infra-platform-frontend/public/locales/en/plugins.json
@@ -23,12 +23,16 @@
   "description": "Description",
   "name": "Name",
   "version": "Version",
+  "pluginVersion": "Plugin Version",
   "pluginCode": "Plugin Code",
   "uiSchema": "UI Schema",
   "codeDescription": "Write your plugin code implementing the BasePlugin interface",
   "schemaDescription": "Define the UI elements for your plugin (JSON format)",
   "view": "View",
   "loading": "Loading plugin...",
+  "importPluginJson": "Import Plugin JSON",
+  "copy": "Copy",
+  "download": "Download",
   "deletePlugin": {
     "title": "Delete Plugin",
     "confirmation": "Are you sure you want to delete the plugin \"{{name}}\"?",
